@@ -113,7 +113,7 @@
 
 <cell>
 <begin>
-\parbox{<cellwidth/>\textpercent}{\raggedright</begin>
+\parbox{<cellrelwidth/>\textpercent}{\raggedright</begin>
 <end>}&amp;
 </end>
 </cell>
